export const snapshot = {};

snapshot[`Baseline/objects/put metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/put metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/objects/get/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/get/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/objects/get/non-existent metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "content-length": "359",
    "content-type": "application/xml",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Baseline/objects/get/non-existent body 1`] = `
'<?xml version="1.0" encoding="UTF-8"?>
<Error><Code>NoSuchKey</Code><Message>The specified key does not exist.</Message><Key>no-such</Key><BucketName>test-objects-bucket</BucketName><Resource>/test-objects-bucket/no-such</Resource><RequestId>ID</RequestId><HostId>HOST</HostId></Error>'
`;

snapshot[`Proxy/objects/get/non-existent metadata 1`] = `
{
  headers: {
    "content-type": "application/xml",
    vary: "Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Proxy/objects/get/non-existent body 1`] = `'<?xml version="1.0" encoding="UTF-8"?><Error><Code>NoSuchKey</Code><Message>The specified key does not exist.</Message></Error>'`;

snapshot[`Baseline/objects/head/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/head/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/objects/head/non-existent metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "content-length": "0",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-minio-error-code": "NoSuchKey",
    "x-minio-error-desc": '"The specified key does not exist."',
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Proxy/objects/head/non-existent metadata 1`] = `
{
  headers: {},
  status: 404,
}
`;

snapshot[`Baseline/objects/delete/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/delete/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;
